--- a/trunk/TravelDreamWeb/WebContent/WEB-INF/web.xml
+++ b/trunk/TravelDreamWeb/WebContent/WEB-INF/web.xml
@@ -46,6 +46,6 @@
 		<user-data-constraint> <description /> <transport-guarantee>CONFIDENTIAL</transport-guarantee> 
 		</user-data-constraint> </security-constraint> -->
 	<welcome-file-list>
-		<welcome-file>home.xhtml</welcome-file>
+		<welcome-file>sceltaInserimento.xhtml</welcome-file>
 	</welcome-file-list>
 </web-app>
