--- a/trunk/TravelDreamWeb/WebContent/WEB-INF/web.xml
+++ b/trunk/TravelDreamWeb/WebContent/WEB-INF/web.xml
@@ -20,6 +20,7 @@
 			<form-error-page>/loginError.xhtml</form-error-page>
 		</form-login-config>
 	</login-config>
+	<!-- 
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>Admins Pages</web-resource-name>
@@ -40,7 +41,7 @@
 			<role-name>USER</role-name>
 		</auth-constraint>
 	</security-constraint>
-	<!-- <security-constraint> <display-name>SSL transport required</display-name> 
+	<security-constraint> <display-name>SSL transport required</display-name> 
 		<web-resource-collection> <web-resource-name>secure pages</web-resource-name> 
 		<description /> <url-pattern>/login.xhtml</url-pattern> </web-resource-collection> 
 		<user-data-constraint> <description /> <transport-guarantee>CONFIDENTIAL</transport-guarantee> 
