--- a/TravelDreamWeb/WebContent/WEB-INF/web.xml
+++ b/TravelDreamWeb/WebContent/WEB-INF/web.xml
@@ -14,13 +14,15 @@
 		<url-pattern>*.jsf</url-pattern>
 	</servlet-mapping>
 	<login-config>
+		
 		<auth-method>FORM</auth-method>
+		
 		<form-login-config>
 			<form-login-page>/login.xhtml</form-login-page>
 			<form-error-page>/loginError.xhtml</form-error-page>
 		</form-login-config>
 	</login-config>
-	<!-- 
+	
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>Admins Pages</web-resource-name>
@@ -41,7 +43,7 @@
 			<role-name>USER</role-name>
 		</auth-constraint>
 	</security-constraint>
-	<security-constraint> <display-name>SSL transport required</display-name> 
+	<!-- <security-constraint> <display-name>SSL transport required</display-name> 
 		<web-resource-collection> <web-resource-name>secure pages</web-resource-name> 
 		<description /> <url-pattern>/login.xhtml</url-pattern> </web-resource-collection> 
 		<user-data-constraint> <description /> <transport-guarantee>CONFIDENTIAL</transport-guarantee> 
